{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 65,
  "lineage": "0d391113-217b-e3b8-76e2-e7e4b9b6242e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-025356d80231a10e9",
            "owner_id": "061587139304",
            "tags": {
              "Name": "ig-001"
            },
            "vpc_id": "vpc-0c8bc1e62f89c7dda"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:061587139304:security-group/sg-01a42e4e3e42a1d65",
            "description": "EKS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a42e4e3e42a1d65",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "sgeks",
            "name_prefix": null,
            "owner_id": "061587139304",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c8bc1e62f89c7dda"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_eks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3279684713",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01a42e4e3e42a1d65",
            "self": false,
            "source_security_group_id": "sg-01a42e4e3e42a1d65",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.eks_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_default_EKS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3409185824",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01a42e4e3e42a1d65",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.eks_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:061587139304:subnet/subnet-0d67d9ef5705cb63f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d67d9ef5705cb63f",
            "map_public_ip_on_launch": true,
            "owner_id": "061587139304",
            "tags": {
              "K8sCluster": "cluster01",
              "Name": "snet-public-01",
              "kubernetes.io/cluster/cluster01": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c8bc1e62f89c7dda"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:061587139304:subnet/subnet-01f64f1ce8801a592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01f64f1ce8801a592",
            "map_public_ip_on_launch": true,
            "owner_id": "061587139304",
            "tags": {
              "K8sCluster": "cluster01",
              "Name": "snet-public-02",
              "kubernetes.io/cluster/cluster01": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c8bc1e62f89c7dda"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:061587139304:vpc/vpc-0c8bc1e62f89c7dda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098cbc9299184c838",
            "default_route_table_id": "rtb-0f0e8178aed9e635e",
            "default_security_group_id": "sg-09553b3fd834e8c44",
            "dhcp_options_id": "dopt-ba3b2bd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c8bc1e62f89c7dda",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f0e8178aed9e635e",
            "owner_id": "061587139304",
            "tags": {
              "Name": "vpc-001"
            }
          }
        }
      ]
    }
  ]
}